# pico-playground

scanvideo/test_pattern/: CMakeLists.txt
